--- a/src/CABasicCRUD.Application/CABasicCRUD.Application.csproj
+++ b/src/CABasicCRUD.Application/CABasicCRUD.Application.csproj
@@ -4,4 +4,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="14.0.0-beta-1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CABasicCRUD.Domain\CABasicCRUD.Domain.csproj" />
+  </ItemGroup>
 </Project>
