build(infra): add EF core and reference to Application

--- a/src/CABasicCRUD.Infrastructure.Persistence/CABasicCRUD.Infrastructure.Persistence.csproj
+++ b/src/CABasicCRUD.Infrastructure.Persistence/CABasicCRUD.Infrastructure.Persistence.csproj
@@ -4,4 +4,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CABasicCRUD.Application\CABasicCRUD.Application.csproj" />
+  </ItemGroup>
 </Project>
