--- a/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
+++ b/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
@@ -5,4 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+  </ItemGroup>
 </Project>
