build(api): add reference to Infrastructure

--- a/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
+++ b/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
@@ -12,4 +12,7 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CABasicCRUD.Infrastructure.Persistence\CABasicCRUD.Infrastructure.Persistence.csproj" />
+  </ItemGroup>
 </Project>
