--- a/src/CABasicCRUD.Application/CABasicCRUD.Application.csproj
+++ b/src/CABasicCRUD.Application/CABasicCRUD.Application.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MediatR" Version="14.0.0-beta-1" />
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CABasicCRUD.Domain\CABasicCRUD.Domain.csproj" />
