--- a/src/CABasicCRUD.Infrastructure/CABasicCRUD.Infrastructure.csproj
+++ b/src/CABasicCRUD.Infrastructure/CABasicCRUD.Infrastructure.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
+  </ItemGroup>
 </Project>
