build(api): add jwt configuration and infrastructure reference

--- a/src/CABasicCRUD.Presentation.WebAPI/appsettings.json
+++ b/src/CABasicCRUD.Presentation.WebAPI/appsettings.json
@@ -14,5 +14,11 @@
                 "Url": "http://localhost:5001"
             }
         }
+    },
+    "Jwt": {
+        "Issuer": "CABasicCRUD",
+        "Audience": "CABasicCRUD",
+        "SecretKey": "Some_extremely_long_and_secure_secret_key",
+        "ExpiryInMinutes": 60
     }
 }
