--- a/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
+++ b/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
@@ -14,5 +14,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CABasicCRUD.Infrastructure.Persistence\CABasicCRUD.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\CABasicCRUD.Infrastructure\CABasicCRUD.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
