--- a/src/CABasicCRUD.Presentation.WebAPI/appsettings.Development.json
+++ b/src/CABasicCRUD.Presentation.WebAPI/appsettings.Development.json
@@ -14,5 +14,11 @@
                 "Url": "http://localhost:5002"
             }
         }
+    },
+    "Jwt": {
+        "Issuer": "CABasicCRUD",
+        "Audience": "CABasicCRUD",
+        "SecretKey": "Some_extremely_long_and_secure_secret_key",
+        "ExpiryInMinutes": 60
     }
 }
