--- a/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
+++ b/src/CABasicCRUD.Presentation.WebAPI/CABasicCRUD.Presentation.WebAPI.csproj
@@ -1,19 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CABasicCRUD.Infrastructure.Persistence\CABasicCRUD.Infrastructure.Persistence.csproj" />
-    <ProjectReference Include="..\CABasicCRUD.Infrastructure\CABasicCRUD.Infrastructure.csproj" />
+    <ProjectReference Include="..\CABasicCRUD.Application\CABasicCRUD.Application.csproj" />
   </ItemGroup>
 </Project>
