refactor(api): rename WebAPI to WebApi
Change folder name and .csproj file name.
Change references to project from sln and other projects.
Change all namespaces.

--- a/src/CABasicCRUD.Host/CABasicCRUD.Host.csproj
+++ b/src/CABasicCRUD.Host/CABasicCRUD.Host.csproj
@@ -4,7 +4,7 @@
     <ProjectReference Include="..\CABasicCRUD.Application\CABasicCRUD.Application.csproj" />
     <ProjectReference Include="..\CABasicCRUD.Infrastructure\CABasicCRUD.Infrastructure.csproj" />
     <ProjectReference Include="..\CABasicCRUD.Infrastructure.Persistence\CABasicCRUD.Infrastructure.Persistence.csproj" />
-    <ProjectReference Include="..\CABasicCRUD.Presentation.WebAPI\CABasicCRUD.Presentation.WebAPI.csproj" />
+    <ProjectReference Include="..\CABasicCRUD.Presentation.WebApi\CABasicCRUD.Presentation.WebApi.csproj" />
   </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
