--- a/src/CABasicCRUD.Application/CABasicCRUD.Application.csproj
+++ b/src/CABasicCRUD.Application/CABasicCRUD.Application.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CABasicCRUD.Domain\CABasicCRUD.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <InternalsVisibleTo Include="CABasicCRUD.UnitTests.Application" />
+  </ItemGroup>
 </Project>
