refactor(infra): rename to Infrastructure.Persistence.Sqlite
Change project folder name and .csproj file name.
Change references from host project and sln file.
Change all namespaces, including those in migrations.

--- a/src/CABasicCRUD.Host/CABasicCRUD.Host.csproj
+++ b/src/CABasicCRUD.Host/CABasicCRUD.Host.csproj
@@ -3,7 +3,7 @@
     <ProjectReference Include="..\CABasicCRUD.Domain\CABasicCRUD.Domain.csproj" />
     <ProjectReference Include="..\CABasicCRUD.Application\CABasicCRUD.Application.csproj" />
     <ProjectReference Include="..\CABasicCRUD.Infrastructure\CABasicCRUD.Infrastructure.csproj" />
-    <ProjectReference Include="..\CABasicCRUD.Infrastructure.Persistence\CABasicCRUD.Infrastructure.Persistence.csproj" />
+    <ProjectReference Include="..\CABasicCRUD.Infrastructure.Persistence.Sqlite\CABasicCRUD.Infrastructure.Persistence.Sqlite.csproj" />
     <ProjectReference Include="..\CABasicCRUD.Presentation.WebApi\CABasicCRUD.Presentation.WebApi.csproj" />
   </ItemGroup>
   <PropertyGroup>
