build(host): move secrets to user secrets
Remove secret values from appsettings, but keep their keys.
Initialize and store user secrets using secret manager.

--- a/src/CABasicCRUD.Host/appsettings.Development.json
+++ b/src/CABasicCRUD.Host/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=data-dev.db"
+        "DefaultConnection": ""
     },
     "Kestrel": {
         "Endpoints": {
@@ -16,9 +16,9 @@
         }
     },
     "Jwt": {
-        "Issuer": "CABasicCRUD",
-        "Audience": "CABasicCRUD",
-        "SecretKey": "Some_extremely_long_and_secure_secret_key",
-        "ExpiryInMinutes": 60
+        "Issuer": "",
+        "Audience": "",
+        "SecretKey": "",
+        "ExpiryInMinutes": 0
     }
 }
