--- a/src/CABasicCRUD.Host.Sqlite.WebApi/.env.example
+++ b/src/CABasicCRUD.Host.Sqlite.WebApi/.env.example
@@ -1,6 +1,13 @@
+ASPNETCORE_ENVIRONMENT=Development
+ASPNETCORE_URLS=http://+:5001
+
 ConnectionStrings__DefaultConnection=Data Source=data-dev.db
 
 Jwt__SecretKey=Some_extremely_long_and_secure_secret_key_make_sure_to_change_this
 Jwt__Issuer=issuer_name
 Jwt__Audience=audience_name
 Jwt__ExpiryInMinutes=0
+
+# docker
+PUBLISH_PROJECT_PATH=./path/of/project/to/publish
+PUBLISHED_PROJECT_ENTRYPOINT=./path/to/dll/inside/container
