--- a/src/CABasicCRUD.Host.Sqlite.WebApi/CABasicCRUD.Host.Sqlite.WebApi.csproj
+++ b/src/CABasicCRUD.Host.Sqlite.WebApi/CABasicCRUD.Host.Sqlite.WebApi.csproj
@@ -17,5 +17,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
   </ItemGroup>
 </Project>
