--- a/src/CABasicCRUD.Host.Sqlite.WebApi/appsettings.Development.json
+++ b/src/CABasicCRUD.Host.Sqlite.WebApi/appsettings.Development.json
@@ -11,5 +11,31 @@
                 "Url": "http://localhost:5002"
             }
         }
+    },
+    "Serilog": {
+        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+        "MinimumLevel": {
+            "Default": "Information",
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "Console"
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "./logs/log-.txt",
+                    "rollingInterval": "Day",
+                    "rollOnFileSizeLimit": true,
+                    "retainedFileCountLimit": 30,
+                    "formatter": "Serilog.Formatting.Json.JsonFormatter"
+                }
+            }
+        ],
+        "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
     }
 }
