--- a/src/CABasicCRUD.Infrastructure.Persistence.Sqlite/CABasicCRUD.Infrastructure.Persistence.Sqlite.csproj
+++ b/src/CABasicCRUD.Infrastructure.Persistence.Sqlite/CABasicCRUD.Infrastructure.Persistence.Sqlite.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.11" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="9.0.11" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
+    <PackageReference Include="Polly" Version="8.6.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CABasicCRUD.Application\CABasicCRUD.Application.csproj" />
