build(host): remove kestrel config and add log config
Project: Host.Sqlite.WebApi
Set Microsoft.Hosting.Lifetime logging to Information to log details on
application startup.

--- a/src/CABasicCRUD.Host.Sqlite.WebApi/appsettings.Development.json
+++ b/src/CABasicCRUD.Host.Sqlite.WebApi/appsettings.Development.json
@@ -5,20 +5,14 @@
             "Microsoft": "Information"
         }
     },
-    "Kestrel": {
-        "Endpoints": {
-            "Http": {
-                "Url": "http://localhost:5002"
-            }
-        }
-    },
     "Serilog": {
         "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
         "MinimumLevel": {
             "Default": "Information",
             "Override": {
                 "Microsoft": "Warning",
-                "System": "Warning"
+                "System": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information"
             }
         },
         "WriteTo": [
