--- a/src/CABasicCRUD.Host.Sqlite.WebApi/.env.example
+++ b/src/CABasicCRUD.Host.Sqlite.WebApi/.env.example
@@ -11,3 +11,8 @@ Jwt__ExpiryInMinutes=0
 # docker
 PUBLISH_PROJECT_PATH=./path/of/project/to/publish
 PUBLISHED_PROJECT_ENTRYPOINT=./path/to/dll/inside/container
+PERSISTENCE_PROJECT_PATH=./path/of/peristence/project
+
+# required for loading appsettings inside the docker container
+# clashes with local configuration
+DOTNET_CONTENTROOT=/myapp/publish
