--- a/src/CABasicCRUD.Host.PostgreSql.WebApi/CABasicCRUD.Host.PostgreSql.WebApi.csproj
+++ b/src/CABasicCRUD.Host.PostgreSql.WebApi/CABasicCRUD.Host.PostgreSql.WebApi.csproj
@@ -17,6 +17,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.0" />
+    <PackageReference
+      Include="OpenTelemetry.Instrumentation.EntityFrameworkCore"
+      Version="1.14.0-beta.2"
+    />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.1-nblumhardt-02317" />
   </ItemGroup>
 </Project>
