build(host): add open telemetry config
Project: Host.PostgreSql.WebApi
Add serilog sink and required environment variables.

--- a/src/CABasicCRUD.Host.PostgreSql.WebApi/.env.example
+++ b/src/CABasicCRUD.Host.PostgreSql.WebApi/.env.example
@@ -16,3 +16,6 @@ POSTGRES_PASSWORD=postgres_password
 
 PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=strong_admin_password
+
+# when using docker, domain name (aspire-dashboard) must match the service name in the docker compose file
+OTEL_EXPORTER_OTLP_ENDPOINT=http://aspire-dashboard:18889
