--- a/src/CABasicCRUD.Host.PostgreSql.WebApi/appsettings.Development.json
+++ b/src/CABasicCRUD.Host.PostgreSql.WebApi/appsettings.Development.json
@@ -6,7 +6,11 @@
         }
     },
     "Serilog": {
-        "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+        "Using": [
+            "Serilog.Sinks.Console",
+            "Serilog.Sinks.File",
+            "Serilog.Sinks.OpenTelemetry"
+        ],
         "MinimumLevel": {
             "Default": "Information",
             "Override": {
@@ -27,6 +31,14 @@
                     "rollOnFileSizeLimit": true,
                     "retainedFileCountLimit": 30,
                     "formatter": "Serilog.Formatting.Json.JsonFormatter"
+                }
+            },
+            {
+                "Name": "OpenTelemetry",
+                "Args": {
+                    "ResourceAttributes": {
+                        "service.name": "CABasicCRUD.Host.PostgreSql.WebApi"
+                    }
                 }
             }
         ],
