--- a/src/CABasicCRUD.Host.PostgreSql.WebApi/docker-compose.yml
+++ b/src/CABasicCRUD.Host.PostgreSql.WebApi/docker-compose.yml
@@ -14,6 +14,7 @@ services:
         environment:
             ASPNETCORE_ENVIRONMENT: ${ASPNETCORE_ENVIRONMENT}
             ASPNETCORE_URLS: ${ASPNETCORE_URLS}
+            OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
             Jwt__SecretKey: ${Jwt__SecretKey}
             Jwt__Issuer: ${Jwt__Issuer}
             Jwt__Audience: ${Jwt__Audience}
@@ -61,6 +62,13 @@ services:
             - 5050:80
         depends_on:
             - postgres
+
+    aspire-dashboard:
+        image: mcr.microsoft.com/dotnet/aspire-dashboard:latest
+        container_name: aspire-dashboard
+        ports:
+            - '127.0.0.1:18888:18888'
+        restart: unless-stopped
 
 volumes:
     postgres_data:
