--- a/src/CABasicCRUD.Host.PostgreSql.WebApi/docker-compose.yml
+++ b/src/CABasicCRUD.Host.PostgreSql.WebApi/docker-compose.yml
@@ -9,17 +9,20 @@ services:
         depends_on:
             migration-runner:
                 condition: service_completed_successfully
+            otel-collector:
+                condition: service_started
         ports:
             - 5002:5002
         environment:
             ASPNETCORE_ENVIRONMENT: ${ASPNETCORE_ENVIRONMENT}
             ASPNETCORE_URLS: ${ASPNETCORE_URLS}
-            OTEL_EXPORTER_OTLP_ENDPOINT: ${OTEL_EXPORTER_OTLP_ENDPOINT}
             Jwt__SecretKey: ${Jwt__SecretKey}
             Jwt__Issuer: ${Jwt__Issuer}
             Jwt__Audience: ${Jwt__Audience}
             Jwt__ExpiryInMinutes: ${Jwt__ExpiryInMinutes}
             ConnectionStrings__DefaultConnection: ${ConnectionStrings__DefaultConnection}
+            OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4317
+            OTEL_EXPORTER_OTLP_PROTOCOL: grpc
         volumes:
             - postgres_data:/var/lib/postgresql/data
 
@@ -67,8 +70,56 @@ services:
         image: mcr.microsoft.com/dotnet/aspire-dashboard:latest
         container_name: aspire-dashboard
         ports:
-            - '127.0.0.1:18888:18888'
+            - '18888:18888'
+        # environment:
+        # - DOTNET_DASHBOARD_UNSECURED_ALLOW_ANONYMOUS=true
+        # - DOTNET_OTLP_AUTH_MODE=None
         restart: unless-stopped
+
+    otel-collector:
+        image: otel/opentelemetry-collector-contrib:latest
+        command: ['--config=/etc/otelcol/config.yml']
+        volumes:
+            - ./otel-collector.yml:/etc/otelcol/config.yml
+        # ports:
+        # - '4317:4317'
+        # - '4318:4318'
+        # - '8889:8889'
+        depends_on:
+            - aspire-dashboard
+            - tempo
+            - loki
+            - prometheus
+
+    tempo:
+        image: grafana/tempo:latest
+        command: ['-config.file=/etc/tempo.yml']
+        volumes:
+            - ./tempo.yml:/etc/tempo.yml
+        # ports:
+        #     - '3200:3200'
+
+    loki:
+        image: grafana/loki:latest
+        command: ['-config.file=/etc/loki.yml']
+        volumes:
+            - ./loki.yml:/etc/loki.yml
+        # ports:
+        #     - '3100:3100'
+
+    prometheus:
+        image: prom/prometheus:latest
+        command:
+            - --config.file=/etc/prometheus/prometheus.yml
+        volumes:
+            - ./prometheus.yml:/etc/prometheus/prometheus.yml
+        ports:
+            - '9090:9090'
+
+    grafana:
+        image: grafana/grafana:latest
+        ports:
+            - '3000:3000'
 
 volumes:
     postgres_data:
