build(host): add libman
Project: Host.PostgreSql.WebMvc
gitignore **/wwwroot/lib folder.
Use libman to install and manage client side libraries.

--- a/src/CABasicCRUD.Host.PostgreSql.WebMvc/CABasicCRUD.Host.PostgreSql.WebMvc.csproj
+++ b/src/CABasicCRUD.Host.PostgreSql.WebMvc/CABasicCRUD.Host.PostgreSql.WebMvc.csproj
@@ -28,4 +28,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.2.1-nblumhardt-02317" />
   </ItemGroup>
+  <Target Name="RestoreClientSideLibraries" BeforeTargets="PreBuildEvent">
+    <Exec Command="libman restore" />
+  </Target>
 </Project>
