--- a/src/CABasicCRUD.Host.Sqlite.WebApi/.env.example
+++ b/src/CABasicCRUD.Host.Sqlite.WebApi/.env.example
@@ -7,3 +7,6 @@ Jwt__SecretKey=Some_extremely_long_and_secure_secret_key_make_sure_to_change_thi
 Jwt__Issuer=issuer_name
 Jwt__Audience=audience_name
 Jwt__ExpiryInMinutes=0
+
+Database__IsSeedDatabase=false
+Database__SeedUserPassword=seed_user_password
