build: add package Bogus
Projects:
Infrastructure.Persistence.Sqlite, Infrastructure.Persistence.PostgreSql

--- a/src/CABasicCRUD.Infrastructure.Persistence.PostgreSql/CABasicCRUD.Infrastructure.Persistence.PostgreSql.csproj
+++ b/src/CABasicCRUD.Infrastructure.Persistence.PostgreSql/CABasicCRUD.Infrastructure.Persistence.PostgreSql.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\CABasicCRUD.Application\CABasicCRUD.Application.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     <PackageReference
       Include="Microsoft.Extensions.Configuration.EnvironmentVariables"
