--- a/src/CABasicCRUD.Infrastructure.Persistence.Sqlite/CABasicCRUD.Infrastructure.Persistence.Sqlite.csproj
+++ b/src/CABasicCRUD.Infrastructure.Persistence.Sqlite/CABasicCRUD.Infrastructure.Persistence.Sqlite.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.11" />
     <PackageReference
