--- a/src/CABasicCRUD.Host.PostgreSql.WebMvc/.env.example
+++ b/src/CABasicCRUD.Host.PostgreSql.WebMvc/.env.example
@@ -17,4 +17,5 @@ POSTGRES_PASSWORD=postgres_password
 PGADMIN_DEFAULT_EMAIL=admin@example.com
 PGADMIN_DEFAULT_PASSWORD=strong_admin_password
 
-
+Database__IsSeedDatabase=false
+Database__SeedUserPassword=seed_user_password
