--- a/src/CABasicCRUD.Infrastructure.Persistence.PostgreSql/CABasicCRUD.Infrastructure.Persistence.PostgreSql.csproj
+++ b/src/CABasicCRUD.Infrastructure.Persistence.PostgreSql/CABasicCRUD.Infrastructure.Persistence.PostgreSql.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.11" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
     <PackageReference Include="Polly" Version="8.6.5" />
+    <PackageReference Include="Npgsql" Version="9.0.4" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
